# ProgrammingLanguage_v3

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  clean.sh  code.rt  code.txt  compile.sh  conanfile.txt  generator.cpp  generator.h  headers.cpp  main.cpp  output.elf  readme.md
Backend/: CMakeLists.txt
Backend/include/: asmCommands.h  generator.h  headers.h  standardFunctions.h  standartFunctions.h
Backend/src/: asmCommands.cpp  generator.cpp  headers.cpp  main.cpp  standardFunctions.cpp  standartFunctions.cpp
Frontend/dump/: dump.gv
Frontend/include/: dsl.h  node.h  parser.h  tokenizer.h  tree.h  vector.h
Frontend/src/: main.cpp  parser.cpp  tokenizer.cpp  tree.cpp  vector.cpp
backend/: CMakeLists.txt
backend/include/: asmCommands.h  backendExceptions.h  generator.h  headers.h  standardFunctions.h
backend/src/: asmCommands.cpp  generator.cpp  headers.cpp  main.cpp  standardFunctions.cpp
common/: node.h  node_types.hpp
examples/: code.rt  factorial.rt  factotial.rt  ranges.rt
frontend/: CMakeLists.txt
frontend/include/: exceptions.h  frontendExceptions.h  parser.h  tokenizer.h
frontend/src/: main.cpp  parser.cpp  tokenizer.cpp
shared/: CMakeLists.txt
shared/include/: tree.h
shared/src/: tree.cpp
src/: main.cpp
src/app/cli/: cli.cpp  cli.hpp
src/app/proc/: proc.cpp  proc.hpp
src/core/backend/include/: backendExceptions.h  generator.h
src/core/backend/src/: asmCommands.cpp  generator.cpp  headers.cpp  standardFunctions.cpp
src/core/common/: tokens.hpp
src/core/frontend/include/: frontendExceptions.h  parser.h  tokenizer.h
src/core/frontend/src/: main.cpp  parser.cpp  tokenizer.cpp
src/core/tree/: CMakeLists.txt
src/core/tree/include/: node.hpp  tree.hpp
src/core/tree/src/: tree.cpp
tree/: CMakeLists.txt
tree/include/: node.hpp  tree.h  treeExceptions.h  treeExceptions.hpp
tree/src/: tree.cpp
